[package]
name = "safron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { features = ["macros","rt-multi-thread"], version = "1.21.2" }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "collector"], version = "0.11"}
dotenv = "0.15.0"
soup = "0.5.1"
reqwest = "0.11.12"
serde_json = "1.0"
json = "0.12.4"
chrono = "0.4.23"
logmat = { git = "https://github.com/UmarZein/logmat"}

[profile.dev.package."*"]
opt-level = 3
